--- a/static/main.css
+++ b/static/main.css
@@ -73,3 +73,30 @@ main {
 .unread {
     font-weight: bold;
 }
+
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 90%);
+    z-index: 1001;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+#loader p {
+    width: fit-content;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 30px;
+    padding-bottom: 8px;
+    background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
+    animation: l2 2s linear infinite;
+}
+#loader p:before {
+    content:"Loading Feeds..."
+}
+@keyframes l2 {to{background-size: 100% 3px}}
