--- a/static/main.css
+++ b/static/main.css
@@ -314,6 +314,63 @@ table th:not(:first-child) {
     display: none;
 }
 
+/* Me */
+.btn {
+    display: inline-block;
+    height: 40px;
+    box-sizing: border-box;
+    background-color: #13aa52;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+    padding: 10px 25px;
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration: none;
+    outline: none;
+    text-align: center;;
+    vertical-align: baseline;
+    transition: transform 150ms, box-shadow 150ms;
+}
+
+.btn:not(.btn-disabled, [disabled], :disabled):hover,
+.btn:not(.btn-disabled, [disabled], :disabled):focus {
+    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+    transform: translateY(-2px);
+}
+
+.btn-danger {
+    background-color: #d64933;
+}
+
+.btn:disabled,
+.btn[disabled],
+.btn-disabled{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+fieldset {
+    border: 0;
+    margin-bottom: 13px;
+    padding-left: 0;
+}
+
+fieldset label {
+    display: block;
+    margin-bottom: 3px;
+}
+
+fieldset input {
+    display: block;
+    padding: 10px 10px;
+    width: 100%;
+    border: solid 3px #ccc;
+    border-radius: 2px;
+}
+
 .unread {
     font-weight: bold;
 }
@@ -345,9 +402,46 @@ table th:not(:first-child) {
 }
 @keyframes l2 {to{background-size: 100% 3px}}
 
-.form-wrapper {
+.card {
     background-color: white;
-    color: black;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    overflow: hidden;
+}
+
+.card-header {
+    background-color: #ffffff;
+    color: #333;
+    text-align: left;
+    padding: 15px;
+    border-bottom: 1px solid #ccc;
+}
+
+.card-body {
+    color: #444;
+    padding: 20px;
+    padding-bottom: 0;
+}
+
+.card-footer {
+    text-align: left;
+    padding: 15px;
+}
+
+#feed-options > ul {
+    list-style: none;
+    display: grid;
+    gap: 20px;
+    margin-top: 30px;
+    padding-left: 0;
+}
+
+.empty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - var(--header-height));
 }
 
 @media (min-width: 567px) {
@@ -439,6 +533,14 @@ table th:not(:first-child) {
     .wrapper.sidebar-open .sidebar ul {
         visibility: visible;
         opacity: 1;
+    }
+
+    .btn {
+        padding: 10px 30px;
+    }
+
+    #feed-options > ul {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
