--- a/static/main.css
+++ b/static/main.css
@@ -526,9 +526,8 @@ fieldset input {
 #single-article pre {
     overflow-x: scroll;
     margin: 15px 0;
-    border-top: 1px dashed #999;
-    border-left: 1px dashed #999;
-    padding-left: 5px;
+    border: 1px dashed #999;
+    padding: 5px;
 }
 
 #single-article hr {
@@ -564,6 +563,10 @@ fieldset input {
 
 #single-article > section:last-child a {
     font-weight: bold;
+}
+
+#add-feed .empty {
+    height: 70px;
 }
 
 @media (min-width: 567px) {
